# Kinova-Torque-Control

./: CMakeLists.txt  README.md  kinova-unilateral.code-workspace  task-space-velocity.cpp  unilateral.cpp
desktop/: bilateral.desktop  bilateral_test.desktop  unilateral.desktop  unilateral_mock.desktop
docs/: Doxyfile.in
includes/: DemandSubscriber.h  Input.h  JointStatePublisher.h  KinovaControl.h  KinovaRobot.h  LoopCycle.h  PD.h  RobotMath.h  TaskSubscriber.h  Utils.h
includes/Math/: Coriolis.h  ForwardKinematics.h  Gravity.h  InverseKinematics.h  Jacobian.h  MassMatrix.h
scripts/: enable-switch.py  sine-waves.py
src/: DemandSubscriber.cpp  JointStatePublisher.cpp  KinovaControl.cpp  KinovaRobot.cpp  KinovaRobot_mock.cpp  LoopCycle.cpp  LoopCycle_ik.cpp  LoopCycle_unilateral.cpp  PD.cpp  TaskSubscriber.cpp
src/Math/: Coriolis.cpp  ForwardKinematics.cpp  Gravity.cpp  InverseKinematics.cpp  Jacobian.cpp  MassMatrix.cpp
test/: CMakeLists.txt  PD_test.cpp  kinova_test.cpp
